--- a/gogoalarm/Base.lproj/Main.storyboard
+++ b/gogoalarm/Base.lproj/Main.storyboard
@@ -10,10 +10,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Main View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="gogoalarm" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="MainViewController" customModule="gogoalarm" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -59,6 +59,9 @@
                                     <imageReference key="image" image="plus" catalog="system" symbolScale="large"/>
                                     <preferredSymbolConfiguration key="preferredSymbolConfiguration" configurationType="pointSize" pointSize="20"/>
                                 </state>
+                                <connections>
+                                    <action selector="addBtnClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="6G5-Mu-e21"/>
+                                </connections>
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
@@ -78,10 +81,10 @@
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="addBtn" destination="5q5-nQ-Nft" id="hNh-8T-7cG"/>
-                        <outlet property="alarmTableView" destination="cO1-YH-W5b" id="6bd-7x-xw8"/>
+                        <outlet property="addBtn" destination="5q5-nQ-Nft" id="qIH-dZ-rnA"/>
+                        <outlet property="alarmTableView" destination="cO1-YH-W5b" id="Ra2-a8-TLh"/>
                         <outlet property="settingBtn" destination="yjT-Eb-Rkr" id="OH8-gd-xGG"/>
-                        <outlet property="titleLabel" destination="IFl-Rp-dKq" id="57d-ON-bYr"/>
+                        <outlet property="titleLabel" destination="IFl-Rp-dKq" id="9Tk-aY-9jM"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
